--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-    "name": "my-bot",
+    "name": "moe-bot",
     "version": "1.0.0",
-    "author": "Kevin Novak",
-    "description": "A discord.js bot template written with TypeScript",
+    "author": "blacky",
+    "description": "A discord.js bot written with TypeScript",
     "license": "MIT",
     "private": true,
-    "engines": {
-        "node": ">=16.9.0"
-    },
     "type": "module",
     "exports": [
-        "./dist/start-bot.js",
-        "./dist/start-manager.js"
+        "./dist/bot.js",
+        "./dist/manager.js"
     ],
     "scripts": {
         "lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx",
@@ -21,21 +18,21 @@
         "clean": "git clean -xdf --exclude=\"/config/**/*\"",
         "clean:dry": "git clean -xdf --exclude=\"/config/**/*\" --dry-run",
         "build": "tsc --project tsconfig.json",
-        "commands:view": "npm run build && node --enable-source-maps dist/start-bot.js commands view",
-        "commands:register": "npm run build && node --enable-source-maps dist/start-bot.js commands register",
-        "commands:rename": "npm run build && node --enable-source-maps dist/start-bot.js commands rename",
-        "commands:delete": "npm run build && node --enable-source-maps dist/start-bot.js commands delete",
-        "commands:clear": "npm run build && node --enable-source-maps dist/start-bot.js commands clear",
+        "commands:view": "npm run build && node --enable-source-maps dist/bot.js commands view",
+        "commands:register": "npm run build && node --enable-source-maps dist/bot.js commands register",
+        "commands:rename": "npm run build && node --enable-source-maps dist/bot.js commands rename",
+        "commands:delete": "npm run build && node --enable-source-maps dist/bot.js commands delete",
+        "commands:clear": "npm run build && node --enable-source-maps dist/bot.js commands clear",
         "start": "npm run start:bot",
-        "start:bot": "npm run build && node --enable-source-maps dist/start-bot.js",
-        "start:manager": "npm run build && node --enable-source-maps dist/start-manager.js",
+        "start:bot": "npm run build && node --enable-source-maps dist/bot.js",
+        "start:manager": "npm run build && node --enable-source-maps dist/manager.js",
         "start:pm2": "npm run build && npm run pm2:start",
         "pm2:start": "pm2 start process.json",
         "pm2:stop": "pm2 stop process.json",
         "pm2:delete": "pm2 delete process.json"
     },
     "dependencies": {
-        "@discordjs/rest": "2.0.1",
+        "@prisma/client": "^4.16.2",
         "class-transformer": "0.5.1",
         "class-validator": "0.14.0",
         "cron-parser": "^4.9.0",
@@ -48,24 +45,36 @@
         "luxon": "3.4.3",
         "node-fetch": "3.3.2",
         "node-schedule": "2.1.1",
-        "pino": "8.16.0",
-        "pino-pretty": "10.2.3",
         "pm2": "^5.3.0",
-        "reflect-metadata": "^0.1.13",
-        "remove-markdown": "0.5.0"
+        "remove-markdown": "^0.5.0",
+        "shoukaku": "^3.4.0",
+        "signale": "^1.4.0",
+        "tslib": "^2.6.0",
+        "undici": "^5.22.1"
     },
     "devDependencies": {
         "@types/express": "4.17.19",
         "@types/luxon": "3.3.2",
-        "@types/node": "^20.8.4",
+        "@types/node": "^20.8.5",
         "@types/node-schedule": "2.1.1",
-        "@types/remove-markdown": "0.3.2",
+        "@types/remove-markdown": "^0.3.2",
+        "@types/signale": "^1.4.4",
         "@typescript-eslint/eslint-plugin": "^6.7.5",
         "@typescript-eslint/parser": "^6.7.5",
         "eslint": "^8.51.0",
         "eslint-plugin-import": "^2.28.1",
         "eslint-plugin-unicorn": "^48.0.1",
         "prettier": "^3.0.3",
+        "prisma": "^4.16.2",
         "typescript": "^5.2.2"
+    },
+    "signale": {
+        "displayScope": true,
+        "displayBadge": true,
+        "displayDate": true,
+        "displayFilename": true,
+        "displayLabel": true,
+        "displayTimestamp": false,
+        "underlineLabel": true
     }
 }
