--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
         "commands:delete": "npm run build && node --enable-source-maps dist/bot.js commands delete",
         "commands:clear": "npm run build && node --enable-source-maps dist/bot.js commands clear",
         "start": "npm run start:bot",
+        "prisma:migrate": "npx prisma migrate dev --name init",
+        "dev": "tsc-watch --onSuccess \"npm run watch\"",
+        "dev:manager": "tsc-watch --onSuccess \"npm run watch:manager\"",
+        "watch": "nodemon --watch './**/*.{ts}' --exec ts-node src/bot.ts",
+        "watch:manager": "nodemon --watch './**/*.{ts}' --exec ts-node src/manager.ts",
         "start:bot": "npm run build && node --enable-source-maps dist/bot.js",
         "start:manager": "npm run build && node --enable-source-maps dist/manager.js",
         "start:pm2": "npm run build && npm run pm2:start",
@@ -32,7 +37,8 @@
         "pm2:delete": "pm2 delete process.json"
     },
     "dependencies": {
-        "@prisma/client": "^4.16.2",
+        "@prisma/client": "^5.4.2",
+        "canvas": "^2.11.2",
         "class-transformer": "0.5.1",
         "class-validator": "0.14.0",
         "cron-parser": "^4.9.0",
@@ -46,26 +52,30 @@
         "node-fetch": "3.3.2",
         "node-schedule": "2.1.1",
         "pm2": "^5.3.0",
+        "reflect-metadata": "^0.1.13",
         "remove-markdown": "^0.5.0",
         "shoukaku": "^3.4.0",
         "signale": "^1.4.0",
-        "tslib": "^2.6.0",
-        "undici": "^5.22.1"
+        "tslib": "^2.6.2",
+        "undici": "^5.26.3"
     },
     "devDependencies": {
         "@types/express": "4.17.19",
         "@types/luxon": "3.3.2",
-        "@types/node": "^20.8.5",
+        "@types/node": "^20.8.6",
         "@types/node-schedule": "2.1.1",
         "@types/remove-markdown": "^0.3.2",
-        "@types/signale": "^1.4.4",
+        "@types/signale": "^1.4.5",
         "@typescript-eslint/eslint-plugin": "^6.7.5",
         "@typescript-eslint/parser": "^6.7.5",
         "eslint": "^8.51.0",
         "eslint-plugin-import": "^2.28.1",
         "eslint-plugin-unicorn": "^48.0.1",
+        "nodemon": "^3.0.1",
         "prettier": "^3.0.3",
-        "prisma": "^4.16.2",
+        "prisma": "^5.4.2",
+        "ts-node": "^10.9.1",
+        "tsc-watch": "^6.0.4",
         "typescript": "^5.2.2"
     },
     "signale": {
