--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "express": "4.18.2",
         "express-promise-router": "4.1.1",
         "filesize": "10.1.0",
+        "i18n": "^0.15.1",
         "linguini": "1.3.1",
         "luxon": "3.4.3",
         "node-fetch": "3.3.2",
@@ -61,6 +62,7 @@
     },
     "devDependencies": {
         "@types/express": "4.17.19",
+        "@types/i18n": "^0.13.7",
         "@types/luxon": "3.3.2",
         "@types/node": "^20.8.6",
         "@types/node-schedule": "2.1.1",
